Fix wrong margin in twitter feed

--- a/source/style/_twitter.scss
+++ b/source/style/_twitter.scss
@@ -9,7 +9,7 @@
   border-radius: 4px;
 
   & + & {
-    margin-top: $padding-small;
+    margin-bottom: $padding-small;
   }
 }
 
